update 集群独立式流控